fix: testing error

--- a/frontend/src/i18n/translation.json
+++ b/frontend/src/i18n/translation.json
@@ -16202,5 +16202,8 @@
   },
   "SETTINGS$SKILLS_NO_SKILLS": {
     "en": "No skills found."
+  },
+  "SETTINGS$SKILLS_TRIGGERS": {
+    "en": "Triggers: {{triggers}}"
   }
 }
